# X-AnyLabeling-Server

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check-openapi.yml
app/: __init__.py  cli.py  main.py
app/api/: video.py
app/core/: config.py  registry.py
app/models/: geco2.py  paddleocr_vl_1_5.py  pp_doclayout_v3.py  rexomni.py  segment_anything_2.py  segment_anything_3.py  segment_anything_3_video.py
app/models/geco2_impl/: attention.py  box_ops.py  counter.py  data_utils.py  ms_deform_attn.py  position_encoding.py  prompt_encoder.py  query_generator.py  regression_head.py  sam_mask.py
app/models/rex_omni/: wrapper.py
app/models/sam2/: __init__.py  build_sam.py
app/models/sam2/modeling/backbones/: hieradet.py
app/models/sam3/: model_builder.py
app/models/sam3/eval/: coco_writer.py
app/models/sam3/model/: data_misc.py  position_encoding.py  sam3_video_predictor.py  tokenizer_ve.py
app/models/sam3/perflib/: nms.py
app/models/sam3/train/: train.py  trainer.py
app/models/sam3/train/data/: coco_json_loaders.py  collator.py  sam3_video_dataset.py
app/models/sam3/train/loss/: loss_fns.py
app/models/sam3/train/utils/: checkpoint_utils.py  distributed.py
app/schemas/: request.py
configs/: models.yaml
configs/auto_labeling/: geco2.yaml  paddleocr_vl_1_5.yaml  pp_doclayout_v3.yaml  segment_anything_3.yaml  segment_anything_3_video.yaml
docs/: configuration.md  get_started.md
